# StockBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: ai.py  bot.py  config.py  db.py  indicators.py  stocks.py
src/cogs/: alerts.py  analysis.py  general.py  stocks_cog.py  summary.py  watchlist.py
tests/: test_db.py  test_indicators.py
